--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/vendor/modernizr-3.5.0.min.js"></script>
 <script src="js/initializeLocalStorage.js"></script>
-<script src="js/utilities.js"></script>
+<script src="js/todos-model.js"></script>
 <script src="js/todos-controller.js"></script>
 </body>
 </html>
