--- a/index.html
+++ b/index.html
@@ -195,9 +195,10 @@
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/vendor/modernizr-3.5.0.min.js"></script>
 <script src="js/my_js_library/essentials.js"></script>
-<script src="js/my_js_library/browser_storage.js"></script>
+<script src="js/my_js_library/browser-storage.js"></script>
+<script src="js/todos-view-model.js"></script>
 <script src="js/validation.js"></script>
-<script src="js/utilities.js"></script>
+<script src="js/todos-model.js"></script>
 <script src="js/initializeLocalStorage.js"></script>
 <script src="js/todos-controller.js"></script>
 </body>
