--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 <script src="js/vendor/modernizr-3.5.0.min.js"></script>
 <script src="js/my_js_library/essentials.js"></script>
 <script src="js/my_js_library/browser-storage.js"></script>
-<script src="js/todos-view-model.js"></script>
+<script src="js/todos-view-manipulator.js"></script>
 <script src="js/validation.js"></script>
 <script src="js/todos-model.js"></script>
 <script src="js/initializeLocalStorage.js"></script>
