--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                     <div class="float-right">
                         <ul class="nav">
                             <li class="dropdown">
-                                <a class="" data-toggle="dropdown"
+                                <a class=""  id="lists-menu"  data-toggle="dropdown"
                                    href="#">Lists <span class="caret"></span>
                                 </a>
-                                <ul class="dropdown-menu dropdown-menu-right">
-                                    <li><a class="list-menu-item">Groceries</a></li>
+                                <ul class="dropdown-menu dropdown-menu-right"
+                                    id="list-names">
                                 </ul>
                             </li>
 
