--- a/index.html
+++ b/index.html
@@ -65,13 +65,15 @@
 
 
             <div id="search-and-create-and-login" class="navbar-div">
-                <div class="navbar-div top-navbar-search-container  remove-when-logged-out"
+
+                <div
+                   class="navbar-div top-navbar-search-container collapse-when-logged-out"
                      id="navbar-search-container">
                     <input type="text" id="navbar-search-input" class="form-control"
                            placeholder="Search">
                 </div>
 
-                <div id="login-and-create-account" class="remove-when-logged-in">
+                <div id="login-and-create-account" class="collapse-when-logged-in">
                     <div id="create-account">
                         <a href="create-account.html">
                             <span class="glyphicon glyphicon-user"></span> Create Account
@@ -79,14 +81,14 @@
                     </div>
 
                     <div>
-                        <a id="login-link">
+                        <a id="login-link"  href="login.html">
                             <span class="glyphicon glyphicon-log-in"></span> Login
                         </a>
                     </div>
                 </div>
 
                 <div id="logout-link-container"
-                     class="invisible-and-collapsed  remove-when-logged-out">
+                     class="collapse-when-logged-out">
                     <div>
                         <a id="logout-link">
                             <span class="glyphicon glyphicon-log-out"></span> Logout
@@ -104,17 +106,18 @@
     <!--  Main Body -->
     <div id="todos-body" class="container-fluid">
         <ul class="todo-list" id="the-todo-list">
-
+            <!--  The list items go here  -->
         </ul>
+
         <form id="new-list-item-form"
-              class="remove-when-logged-out remove-when-creating-list">
+              class="collapse-when-logged-out  collapse-when-creating-list">
             <div class="navbar-div">
                 <div class="navbar-div top-navbar-search-container">
                     <input type="text"  class="form-control"
                            placeholder="Add item"
                            required minlength="1" >
                 </div>
-                <div class="form-submit navbar-div add-item-button">
+                <div class="form-submit  navbar-div  add-item-button">
                     <input type="submit" value="Add">
                 </div>
 
@@ -125,8 +128,7 @@
 
 
         <form id="new-list-form"
-              class="invisible-and-collapsed remove-when-logged-out
-              show-when-creating-list">
+              class="collapse-when-logged-out  show-when-creating-list">
 
             <div class="navbar-div">
                 <input type="text"  class="form-control"
@@ -143,53 +145,6 @@
 
         </form>
     </div>
-
-
-    <nav id="login-section" class="top-navbar invisible-and-collapsed">
-        <div class="container-fluid top-container-in-navbar">
-
-            <div class="app-name-and-categories">
-                <div class="navbar-div" id="page-name-container">
-                    <header id="page-name" class="navbar-brand">Log In</header>
-                </div>
-                <div class="float-right" id="back-to-main">
-                    <a href="index.html">
-                        <span class="glyphicon glyphicon-arrow-left"></span> Back To Main</a>
-                </div>
-
-            </div>
-
-            <form id="login-form">
-                <div class="navbar-div">
-                    <div class="navbar-div top-navbar-search-container">
-                        <input type="text"  class="form-control" id="login-username"
-                               placeholder="Username"
-                               required minlength="8" maxlength="16">
-                    </div>
-
-                </div>
-                <div  class="navbar-div">
-                    <div class="navbar-div top-navbar-search-container">
-                        <input type="password"  class="form-control" id="login-password"
-                               placeholder="Password"
-                               required minlength="8" maxlength="16">
-                    </div>
-
-                </div>
-
-                <div class="navbar-div">
-                    <div class="navbar-div top-navbar-search-container form-submit">
-                        <input type="submit" id="login-submit">
-                    </div>
-
-                </div>
-
-            </form>
-
-
-        </div>
-    </nav>
-
 
 
 </div>
