--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 <script src="js/todos-ui.js"></script>
 <script src="js/todos-model-validator.js"></script>
 <script src="js/todos-model.js"></script>
-<script src="js/todos-view-manipulator.js"></script>
+<script src="js/todos-ui-manipulator.js"></script>
 <script src="js/todos-controller.js"></script>
 </body>
 </html>
