--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
     <nav class="top-navbar" id="main-home-navbar">
         <div class="container-fluid top-container-in-navbar">
 
+            <noscript>
+                <div class="navbar-div" id="no-script-message-container">
+                    <p>You must have Javascript enabled to use this application.
+                        Get with the times, man.
+                    </p>
+                </div>
+            </noscript>
+
             <div class="app-name-and-categories">
                 <div class="navbar-div app-name-container" id="app-name-holder">
                     <header id="app-name" class="navbar-brand" href="#">To-Do's</header>
@@ -89,7 +97,7 @@
                 </div>
 
                 <div id="logout-link-container"
-                     class="collapse-when-logged-out">
+                     class="invisible-and-collapsed  collapse-when-logged-out">
                     <div>
                         <a id="logout-link">
                             <span class="glyphicon glyphicon-log-out"></span> Logout
@@ -131,12 +139,13 @@
 
 
         <form id="new-list-form"
-           class="invisible-and-collapsed  collapse-when-logged-out  show-when-creating-list">
+            class="invisible-and-collapsed  collapse-when-logged-out
+                show-when-creating-list">
 
             <div class="navbar-div">
                 <input type="text"  id="new-list-name"  class="form-control"
                        placeholder="Name new list..."
-                       required minlength="8" maxlength="16">
+                       required minlength="3" maxlength="40">
             </div>
 
             <div class="navbar-div">
