--- a/create-account.html
+++ b/create-account.html
@@ -23,6 +23,14 @@
     <nav class="top-navbar">
         <div class="container-fluid top-container-in-navbar">
 
+            <noscript>
+                <div class="navbar-div" id="no-script-message-container">
+                    <p>You must have Javascript enabled to use this application.
+                        Get with the times, man.
+                    </p>
+                </div>
+            </noscript>
+
             <div class="app-name-and-categories">
                 <div class="navbar-div" id="page-name-container">
                     <header id="page-name" class="navbar-brand">Create Account</header>
