--- a/index.html
+++ b/index.html
@@ -116,17 +116,19 @@
     <div id="todos-body" class="container-fluid">
 
         <header id="list-name-header"></header>
+
         <ul class="todo-list" id="the-todo-list">
             <!--  The list items go here  -->
         </ul>
 
         <form id="new-list-item-form"
-              class="invisible-and-collapsed  collapse-when-logged-out  collapse-when-creating-list">
+              class="invisible-and-collapsed  collapse-when-logged-out
+                collapse-when-creating-list">
             <div class="navbar-div">
                 <div class="navbar-div top-navbar-search-container">
                     <input type="text"  class="form-control"
                            placeholder="Add item to list"
-                           required minlength="1" >
+                           required  minlength="1" >
                 </div>
                 <div class="form-submit  navbar-div  add-item-button">
                     <input type="submit" value="Add">
@@ -145,7 +147,7 @@
             <div class="navbar-div">
                 <input type="text"  id="new-list-name"  class="form-control"
                        placeholder="Name new list..."
-                       required minlength="3" maxlength="40">
+                       required  minlength="3" maxlength="40">
             </div>
 
             <div class="navbar-div">
