--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta name="description" content="To-Do List Application for productivity">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>To-Do's</title>
+    <title>To-Do's | Login</title>
     <link rel="manifest" href="site.webmanifest">
 
     <link rel="stylesheet" href="css/vendor/bootstrap/css/bootstrap.min.css">
@@ -21,6 +21,14 @@
 
     <nav id="login-section" class="top-navbar">
         <div class="container-fluid top-container-in-navbar">
+
+            <noscript>
+                <div class="navbar-div" id="no-script-message-container">
+                    <p>You must have Javascript enabled to use this application.
+                        Get with the times, man.
+                    </p>
+                </div>
+            </noscript>
 
             <div class="app-name-and-categories">
                 <div class="navbar-div" id="page-name-container">
