--- a/index.html
+++ b/index.html
@@ -75,14 +75,15 @@
             <div id="search-and-create-and-login" class="navbar-div">
 
                 <div
-                   class="navbar-div top-navbar-search-container invisible-and-collapsed
-                   collapse-when-logged-out"
+                   class="navbar-div  top-navbar-search-container
+                   invisible-and-collapsed  collapse-when-logged-out"
                      id="navbar-search-container">
                     <input type="text" id="navbar-search-input" class="form-control"
                            placeholder="Search">
                 </div>
 
-                <div id="login-and-create-account" class="invisible-and-collapsed collapse-when-logged-in">
+                <div id="login-and-create-account" class="invisible-and-collapsed
+                    collapse-when-logged-in">
                     <div id="create-account">
                         <a href="create-account.html">
                             <span class="glyphicon glyphicon-user"></span> Create Account
@@ -115,7 +116,7 @@
     <!--  Main Body -->
     <div id="todos-body" class="container-fluid">
 
-        <header id="list-name-header"></header>
+        <header id="list-name-header" class="collapse-when-logged-out"></header>
 
         <ul class="todo-list" id="the-todo-list">
             <!--  The list items go here  -->
