--- a/create-account.html
+++ b/create-account.html
@@ -96,6 +96,8 @@
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/my_js_library/essentials.js"></script>
 <script src="js/my_js_library/browser-storage.js"></script>
+<script src="js/todos-ids.js"></script>
+<script src="js/todos-css-classes.js"></script>
 <script src="js/todos-ui.js"></script>
 <script src="js/todos-model-validator.js"></script>
 <script src="js/todos-model.js"></script>
