--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
                 collapse-when-creating-list">
             <div class="navbar-div">
                 <div class="navbar-div top-navbar-search-container">
-                    <input type="text"  class="form-control"
+                    <input type="text" id="new-item-text-input"
+                           class="form-control"
                            placeholder="Add item to list"
                            required  minlength="1" >
                 </div>
