--- a/create-account.html
+++ b/create-account.html
@@ -102,6 +102,9 @@
 <script src="js/todos-model-validator.js"></script>
 <script src="js/todos-model.js"></script>
 <script src="js/todos-ui-manipulator.js"></script>
+<script src="js/appearance-manager.js"></script>
+<script src="js/todos-controller-helper.js"></script>
 <script src="js/todos-controller.js"></script>
+
 </body>
 </html>
