--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 <script src="js/todos-model-validator.js"></script>
 <script src="js/todos-model.js"></script>
 <script src="js/todos-ui-manipulator.js"></script>
-<script src="js/appearance-manager.js"></script>
+<script src="js/todos-content-manager.js"></script>
 <script src="js/todos-controller-helper.js"></script>
 <script src="js/todos-controller.js"></script>
 </body>
