--- a/index.html
+++ b/index.html
@@ -179,5 +179,6 @@
 <script src="js/todos-content-manager.js"></script>
 <script src="js/todos-controller-helper.js"></script>
 <script src="js/todos-controller.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
