--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
 <script src="js/classes/UIManipulator.js"></script>
 <script src="js/classes/UIControllerHelper.js"></script>
 <script src="js/classes/UIController.js"></script>
+<script src="js/classes/SectionRemoverRevealer.js"></script>
 <script src="js/classes/ContentManager.js"></script>
 <script src="js/classes/Content.js"></script>
 <script src="js/main.js"></script>
