--- a/index.html
+++ b/index.html
@@ -175,12 +175,15 @@
 <script src="js/classes/IDs.js"></script>
 <script src="js/classes/CSSClasses.js"></script>
 <script src="js/classes/UI.js"></script>
+<script src="js/classes/UIStyleState.js"></script>
 <script src="js/classes/ElementRemoverRevealer.js"></script>
 <script src="js/classes/ElementTextGetterSetter.js"></script>
 <script src="js/classes/UIManipulator.js"></script>
 <script src="js/classes/UIControllerHelper.js"></script>
 <script src="js/classes/UIController.js"></script>
 <script src="js/classes/SectionRemoverRevealer.js"></script>
+<script src="js/classes/LoggedInContent.js"></script>
+<script src="js/classes/LoggedOutContent.js"></script>
 <script src="js/classes/ContentManager.js"></script>
 <script src="js/classes/Content.js"></script>
 <script src="js/main.js"></script>
