changed Content class to Page class, plus more debugging

--- a/create-account.html
+++ b/create-account.html
@@ -96,15 +96,23 @@
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/my_js_library/essentials.js"></script>
 <script src="js/my_js_library/browser-storage.js"></script>
-<script src="js/todos-ids.js"></script>
-<script src="js/todos-css-classes.js"></script>
-<script src="js/todos-ui.js"></script>
-<script src="js/todos-model-validator.js"></script>
-<script src="js/todos-model.js"></script>
-<script src="js/todos-ui-manipulator.js"></script>
-<script src="js/todos-content-manager.js"></script>
-<script src="js/todos-controller-helper.js"></script>
-<script src="js/todos-controller.js"></script>
+<script src="js/classes/ModelValidator.js"></script>
+<script src="js/classes/Model.js"></script>
+<script src="js/classes/IDs.js"></script>
+<script src="js/classes/CSSClasses.js"></script>
+<script src="js/classes/UI.js"></script>
+<script src="js/classes/UIStyleState.js"></script>
+<script src="js/classes/ElementRemoverRevealer.js"></script>
+<script src="js/classes/ElementTextGetterSetter.js"></script>
+<script src="js/classes/UIManipulator.js"></script>
+<script src="js/classes/UIControllerHelper.js"></script>
+<script src="js/classes/UIController.js"></script>
+<script src="js/classes/SectionRemoverRevealer.js"></script>
+<script src="js/classes/LoggedInContent.js"></script>
+<script src="js/classes/LoggedOutContent.js"></script>
+<script src="js/classes/ContentManager.js"></script>
+<script src="js/classes/Page.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
