--- a/login.html
+++ b/login.html
@@ -97,7 +97,7 @@
 <script src="js/classes/LoggedInContent.js"></script>
 <script src="js/classes/LoggedOutContent.js"></script>
 <script src="js/classes/ContentManager.js"></script>
-<script src="js/classes/Content.js"></script>
+<script src="js/classes/Page.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
