--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
             </ul>
 
             <form id="new-list-item-form"
-                  class="invisible-and-collapsed  collapse-when-logged-out
-                collapse-when-creating-list">
+                  class="invisible-and-collapsed  collapse-when-logged-out">
                 <div class="navbar-div">
                     <div class="navbar-div top-navbar-search-container">
                         <input type="text" id="new-item-text-input"
@@ -146,8 +145,7 @@
 
 
         <form id="new-list-form"
-            class="invisible-and-collapsed  collapse-when-logged-out
-                show-when-creating-list">
+            class="invisible-and-collapsed  collapse-when-logged-out">
 
             <div class="navbar-div">
                 <input type="text"  id="new-list-name"  class="form-control"
