--- a/create-account.html
+++ b/create-account.html
@@ -92,6 +92,7 @@
 </div>
 
 
+
 <script src="js/vendor/jquery-3.2.1.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/my_js_library/essentials.js"></script>
@@ -105,9 +106,15 @@
 <script src="js/classes/ElementRemoverRevealer.js"></script>
 <script src="js/classes/ElementTextGetterSetter.js"></script>
 <script src="js/classes/UIManipulator.js"></script>
+<script src="js/classes/ListsMenu.js"></script>
+<script src="js/classes/ListsMenuEvents.js"></script>
+<script src="js/classes/ListsMenuUIManipulator.js"></script>
+<script src="js/classes/ListContentUIManipulator.js"></script>
+<script src="js/classes/NewListForm.js"></script>
 <script src="js/classes/UIControllerHelper.js"></script>
 <script src="js/classes/UIController.js"></script>
-<script src="js/classes/SectionRemoverRevealer.js"></script>
+<script src="js/classes/LoggedInUIManipulator.js"></script>
+<script src="js/classes/LoggedOutUIManipulator.js"></script>
 <script src="js/classes/LoggedInContent.js"></script>
 <script src="js/classes/LoggedOutContent.js"></script>
 <script src="js/classes/ContentManager.js"></script>
