--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
                 <!--  The list items go here  -->
             </ul>
 
-            <form id="new-list-item-form"
-                  class="invisible-and-collapsed  collapse-when-logged-out">
+            <form id="new-list-item-form">
                 <div class="navbar-div">
                     <div class="navbar-div top-navbar-search-container">
                         <input type="text" id="new-item-text-input"
