--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
 <script src="js/classes/ModelValidator.js"></script>
 <script src="js/classes/Model.js"></script>
 <script src="js/classes/IDs.js"></script>
+<script src="js/classes/ActionsMenu.js"></script>
+<script src="js/classes/ActionsMenuEvents.js"></script>
+<script src="js/classes/CreateAccountForm.js"></script>
+<script src="js/classes/CreateAccountFormEvents.js"></script>
 <script src="js/classes/CSSClasses.js"></script>
 <script src="js/classes/UI.js"></script>
 <script src="js/classes/UIStyleState.js"></script>
@@ -182,8 +186,13 @@
 <script src="js/classes/ListsMenu.js"></script>
 <script src="js/classes/ListsMenuEvents.js"></script>
 <script src="js/classes/ListsMenuUIManipulator.js"></script>
+<script src="js/classes/ListContent.js"></script>
+<script src="js/classes/ListContentEvents.js"></script>
+<script src="js/classes/ListContentEventsHelper.js"></script>
 <script src="js/classes/ListContentUIManipulator.js"></script>
+<script src="js/classes/NewListFormEvents.js"></script>
 <script src="js/classes/NewListForm.js"></script>
+<script src="js/classes/LoginLogoutEvents.js"></script>
 <script src="js/classes/UIControllerHelper.js"></script>
 <script src="js/classes/UIController.js"></script>
 <script src="js/classes/LoggedInUIManipulator.js"></script>
