doing a lot of class renaming

--- a/login.html
+++ b/login.html
@@ -92,25 +92,25 @@
 <script src="js/classes/CreateAccountForm.js"></script>
 <script src="js/classes/CreateAccountFormEvents.js"></script>
 <script src="js/classes/CSSClasses.js"></script>
-<script src="js/classes/UI.js"></script>
-<script src="js/classes/UIStyleState.js"></script>
+<script src="js/classes/DOM.js"></script>
+<script src="js/classes/DOMStyleState.js"></script>
 <script src="js/classes/ElementRemoverRevealer.js"></script>
 <script src="js/classes/ElementTextGetterSetter.js"></script>
-<script src="js/classes/UIManipulator.js"></script>
+<script src="js/classes/DOMManipulator.js"></script>
 <script src="js/classes/ListsMenu.js"></script>
 <script src="js/classes/ListsMenuEvents.js"></script>
-<script src="js/classes/ListsMenuUIManipulator.js"></script>
+<script src="js/classes/ListsMenuDOMManipulator.js"></script>
 <script src="js/classes/ListContent.js"></script>
 <script src="js/classes/ListContentEvents.js"></script>
 <script src="js/classes/ListContentEventsHelper.js"></script>
-<script src="js/classes/ListContentUIManipulator.js"></script>
+<script src="js/classes/ListContentDOMManipulator.js"></script>
 <script src="js/classes/NewListFormEvents.js"></script>
 <script src="js/classes/NewListForm.js"></script>
 <script src="js/classes/LoginLogoutEvents.js"></script>
-<script src="js/classes/UIControllerHelper.js"></script>
-<script src="js/classes/UIController.js"></script>
-<script src="js/classes/LoggedInUIManipulator.js"></script>
-<script src="js/classes/LoggedOutUIManipulator.js"></script>
+<script src="js/classes/DOMControllerHelper.js"></script>
+<script src="js/classes/DOMController.js"></script>
+<script src="js/classes/LoggedInDOMManipulator.js"></script>
+<script src="js/classes/LoggedOutDOMManipulator.js"></script>
 <script src="js/classes/LoggedInContent.js"></script>
 <script src="js/classes/LoggedOutContent.js"></script>
 <script src="js/classes/ContentManager.js"></script>
