creating more classes

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-right">
                                     <li id="new-list-action"><a>New List</a></li>
-                                    <li><a>Edit Lists</a></li>
-                                    <li><a>Delete Checked Items</a></li>
+                                    <li id="edit-lists-action"><a>Edit Lists</a></li>
+                                    <li id="delete-checked-items-action">
+										<a>Delete Checked Items</a>
+									</li>
                                 </ul>
                             </li>
 
