moved classes into folders

--- a/index.html
+++ b/index.html
@@ -172,35 +172,35 @@
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/my_js_library/essentials.js"></script>
 <script src="js/my_js_library/browser-storage.js"></script>
-<script src="js/classes/ModelValidator.js"></script>
-<script src="js/classes/Model.js"></script>
-<script src="js/classes/IDs.js"></script>
-<script src="js/classes/ActionsMenu.js"></script>
-<script src="js/classes/ActionsMenuEvents.js"></script>
-<script src="js/classes/CreateAccountForm.js"></script>
-<script src="js/classes/CreateAccountFormEvents.js"></script>
-<script src="js/classes/CSSClasses.js"></script>
-<script src="js/classes/DOM.js"></script>
-<script src="js/classes/DOMStyleState.js"></script>
-<script src="js/classes/ElementRemoverRevealer.js"></script>
-<script src="js/classes/ElementTextGetterSetter.js"></script>
+<script src="js/classes/Model/ModelValidator.js"></script>
+<script src="js/classes/Model/Model.js"></script>
+<script src="js/classes/DOM/IDs.js"></script>
+<script src="js/classes/ActionsMenu/ActionsMenu.js"></script>
+<script src="js/classes/ActionsMenu/ActionsMenuEvents.js"></script>
+<script src="js/classes/CreateAccountForm/CreateAccountForm.js"></script>
+<script src="js/classes/CreateAccountForm/CreateAccountFormEvents.js"></script>
+<script src="js/classes/DOM/CSSClasses.js"></script>
+<script src="js/classes/DOM/DOM.js"></script>
+<script src="js/classes/DOM/DOMStyleState.js"></script>
+<script src="js/classes/DOM/ElementRemoverRevealer.js"></script>
+<script src="js/classes/DOM/ElementTextGetterSetter.js"></script>
 <script src="js/classes/DOMManipulator.js"></script>
-<script src="js/classes/ListsMenu.js"></script>
-<script src="js/classes/ListsMenuEvents.js"></script>
-<script src="js/classes/ListsMenuDOMManipulator.js"></script>
-<script src="js/classes/ListContent.js"></script>
-<script src="js/classes/ListContentEvents.js"></script>
-<script src="js/classes/ListContentEventsHelper.js"></script>
-<script src="js/classes/ListContentDOMManipulator.js"></script>
-<script src="js/classes/NewListFormEvents.js"></script>
-<script src="js/classes/NewListForm.js"></script>
-<script src="js/classes/LoginLogoutEvents.js"></script>
-<script src="js/classes/DOMControllerHelper.js"></script>
-<script src="js/classes/DOMController.js"></script>
-<script src="js/classes/LoggedInDOMManipulator.js"></script>
-<script src="js/classes/LoggedOutDOMManipulator.js"></script>
-<script src="js/classes/LoggedInContent.js"></script>
-<script src="js/classes/LoggedOutContent.js"></script>
+<script src="js/classes/ListsMenu/ListsMenu.js"></script>
+<script src="js/classes/ListsMenu/ListsMenuEvents.js"></script>
+<script src="js/classes/ListsMenu/ListsMenuDOMManipulator.js"></script>
+<script src="js/classes/ListContent/ListContent.js"></script>
+<script src="js/classes/ListContent/ListContentEvents.js"></script>
+<script src="js/classes/ListContent/ListContentEventsHelper.js"></script>
+<script src="js/classes/ListContent/ListContentDOMManipulator.js"></script>
+<script src="js/classes/NewListForm/NewListFormEvents.js"></script>
+<script src="js/classes/NewListForm/NewListForm.js"></script>
+<script src="js/classes/LoginLogout/LoginLogoutEvents.js"></script>
+<script src="js/classes/DOM/DOMControllerHelper.js"></script>
+<script src="js/classes/DOM/DOMController.js"></script>
+<script src="js/classes/LoggedInContent/LoggedInDOMManipulator.js"></script>
+<script src="js/classes/LoggedOutContent/LoggedOutDOMManipulator.js"></script>
+<script src="js/classes/LoggedInContent/LoggedInContent.js"></script>
+<script src="js/classes/LoggedOutContent/LoggedOutContent.js"></script>
 <script src="js/classes/ContentManager.js"></script>
 <script src="js/classes/Page.js"></script>
 <script src="js/main.js"></script>
