--- a/login.html
+++ b/login.html
@@ -94,7 +94,7 @@
 <script src="js/classes/CreateAccountForm/CreateAccountFormEventsHelper.js"></script>
 <script src="js/classes/CreateAccountForm/CreateAccountFormEvents.js"></script>
 <script src="js/classes/DOM/CSSClasses.js"></script>
-<script src="js/classes/DOM/DOM.js"></script>
+<script src="js/classes/NavbarDOM.js"></script>
 <script src="js/classes/DOM/DOMStyleState.js"></script>
 <script src="js/classes/DOM/ElementRemoverRevealer.js"></script>
 <script src="js/classes/DOM/ElementTextGetterSetter.js"></script>
