--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 <script src="js/classes/CreateAccountForm/CreateAccountFormEventsHelper.js"></script>
 <script src="js/classes/CreateAccountForm/CreateAccountFormEvents.js"></script>
 <script src="js/classes/DOM/CSSClasses.js"></script>
-<script src="js/classes/DOM/DOM.js"></script>
+<script src="js/classes/NavbarDOM.js"></script>
 <script src="js/classes/DOM/DOMStyleState.js"></script>
 <script src="js/classes/DOM/ElementRemoverRevealer.js"></script>
 <script src="js/classes/DOM/ElementTextGetterSetter.js"></script>
@@ -197,6 +197,7 @@
 <script src="js/classes/NewListForm/NewListFormEventsHelper.js"></script>
 <script src="js/classes/NewListForm/NewListFormEvents.js"></script>
 <script src="js/classes/NewListForm/NewListForm.js"></script>
+<script src="js/classes/LoginLogout/LoginLogoutDOM.js"></script>
 <script src="js/classes/LoginLogout/LoginForm.js"></script>
 <script src="js/classes/LoginLogout/LoginLogoutDOMManipulator.js"></script>
 <script src="js/classes/LoginLogout/LoginLogoutEventsHelper.js"></script>
