--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 
         <form id="new-list-form"
-            class="invisible-and-collapsed  show-when-creating-list">
+            class="invisible-and-collapsed  show-when-creating-list  collapse-when-viewing-list">
 
             <div class="navbar-div">
                 <input type="text"  id="new-list-name"  class="form-control"
