--- a/index.html
+++ b/index.html
@@ -211,12 +211,12 @@
 <script src="js/classes/LoginLogout/LoginLogoutDOMManipulator.js"></script>
 <script src="js/classes/LoginLogout/LoginLogoutEventsHelper.js"></script>
 <script src="js/classes/LoginLogout/LoginLogoutEvents.js"></script>
-<script src="js/classes/DOM/DOMController.js"></script>
+<script src="js/classes/Behavior.js"></script>
 <script src="js/classes/LoggedInContent/LoggedInDOMManipulator.js"></script>
 <script src="js/classes/LoggedOutContent/LoggedOutDOMManipulator.js"></script>
 <script src="js/classes/LoggedInContent/LoggedInContent.js"></script>
 <script src="js/classes/LoggedOutContent/LoggedOutContent.js"></script>
-<script src="js/classes/ContentManager.js"></script>
+<script src="js/classes/Content.js"></script>
 <script src="js/classes/Page.js"></script>
 <script src="js/main.js"></script>
 
