--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
             <div class="navbar-div">
                 <input type="text"  id="new-list-name"  class="form-control"
-                       placeholder="Name new list..."
+                       placeholder="Name New List..."
                        required  minlength="3" maxlength="40">
             </div>
 
@@ -177,11 +177,16 @@
 <script src="js/classes/ListsMenu/ListsMenuEvents.js"></script>
 <script src="js/classes/ListsMenu/ListsMenuDOM.js"></script>
 <script src="js/classes/ListsMenu/ListsMenuDOMManipulator.js"></script>
+<script src="js/classes/ListSection/ListDOM.js"></script>
 <script src="js/classes/ListSection/ListContent/ListContent.js"></script>
 <script src="js/classes/ListSection/ListContent/ListContentEvents.js"></script>
 <script src="js/classes/ListSection/ListContent/ListContentEventsHelper.js"></script>
 <script src="js/classes/ListSection/ListContent/ListContentDOM.js"></script>
 <script src="js/classes/ListSection/ListContent/ListContentDOMManipulator.js"></script>
+<script src="js/classes/ListSection/ListSection.js"></script>
+<script src="js/classes/ListSection/NewListItemForm/NewListItemFormDOM.js"></script>
+<script src="js/classes/ListSection/NewListItemForm/NewListItemFormDOMManipulator.js"></script>
+<script src="js/classes/ListSection/NewListItemForm/NewListItemFormEvents.js"></script>
 <script src="js/classes/NewListForm/NewListFormDOM.js"></script>
 <script src="js/classes/NewListForm/NewListFormDOMManipulator.js"></script>
 <script src="js/classes/NewListForm/NewListFormEventsHelper.js"></script>
@@ -189,7 +194,6 @@
 <script src="js/classes/NewListForm/NewListForm.js"></script>
 <script src="js/classes/LoginLogout/LoginLogoutModel.js"></script>
 <script src="js/classes/LoginLogout/LoginLogoutDOM.js"></script>
-<script src="js/classes/LoginLogout/LoginForm.js"></script>
 <script src="js/classes/LoginLogout/LoginLogoutDOMManipulator.js"></script>
 <script src="js/classes/LoginLogout/LoginLogoutEventsHelper.js"></script>
 <script src="js/classes/LoginLogout/LoginLogoutEvents.js"></script>
