--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
 <script src="js/classes/ListSection/NewListItemForm/NewListItemFormDOM.js"></script>
 <script src="js/classes/ListSection/NewListItemForm/NewListItemFormDOMManipulator.js"></script>
 <script src="js/classes/ListSection/NewListItemForm/NewListItemFormEvents.js"></script>
+<script src="js/classes/ListSection/NewListItemForm/NewListItemForm.js"></script>
 <script src="js/classes/NewListForm/NewListFormDOM.js"></script>
 <script src="js/classes/NewListForm/NewListFormDOMManipulator.js"></script>
 <script src="js/classes/NewListForm/NewListFormEventsHelper.js"></script>
