--- a/login.html
+++ b/login.html
@@ -108,11 +108,17 @@
 <script src="js/classes/ListsMenu/ListsMenuEvents.js"></script>
 <script src="js/classes/ListsMenu/ListsMenuDOM.js"></script>
 <script src="js/classes/ListsMenu/ListsMenuDOMManipulator.js"></script>
+<script src="js/classes/ListSection/ListDOM.js"></script>
 <script src="js/classes/ListSection/ListContent/ListContent.js"></script>
 <script src="js/classes/ListSection/ListContent/ListContentEvents.js"></script>
 <script src="js/classes/ListSection/ListContent/ListContentEventsHelper.js"></script>
 <script src="js/classes/ListSection/ListContent/ListContentDOM.js"></script>
 <script src="js/classes/ListSection/ListContent/ListContentDOMManipulator.js"></script>
+<script src="js/classes/ListSection/ListSection.js"></script>
+<script src="js/classes/ListSection/NewListItemForm/NewListItemFormDOM.js"></script>
+<script src="js/classes/ListSection/NewListItemForm/NewListItemFormDOMManipulator.js"></script>
+<script src="js/classes/ListSection/NewListItemForm/NewListItemFormEvents.js"></script>
+<script src="js/classes/ListSection/NewListItemForm/NewListItemForm.js"></script>
 <script src="js/classes/NewListForm/NewListFormDOM.js"></script>
 <script src="js/classes/NewListForm/NewListFormDOMManipulator.js"></script>
 <script src="js/classes/NewListForm/NewListFormEventsHelper.js"></script>
