--- a/index.html
+++ b/index.html
@@ -119,9 +119,24 @@
     <div id="todos-body" class="container-fluid">
 
         <div id="list-content"  class="invisible-and-collapsed
-        collapse-when-logged-out  collapse-when-creating-list">
+        	collapse-when-logged-out  collapse-when-creating-list">
 
+			<header id="list-name-header"></header>
 
+			<ul class="todo-list" id="the-todo-list"></ul>
+
+			<form id="new-list-item-form">
+				<div class="navbar-div">
+					<div class="navbar-div top-navbar-search-container">
+						<input type="text" id="new-item-text-input"
+							   class="form-control" placeholder="Add item to list"
+							   required  minlength="1" >
+					</div>
+					<div class="form-submit  navbar-div  add-item-button">
+						<input type="submit" value="Add">
+					</div>
+				</div>
+			</form>
 
 		</div>
 
